--- a/src/App.css
+++ b/src/App.css
@@ -34,3 +34,12 @@
   font-size: 1.5rem;
   font-weight: 500;
 }
+
+.modal_resume div{
+  padding-left: 20px;
+}
+
+.modalBodyTitle {
+  margin-top: 1px;
+  margin-left: 4px;
+}
